<resources>
    <string name="app_name">PlaySuit Beta</string>
    <string name="viewActionContextBar">View Mode</string>
    <string name="rescanLibraryActionContextBar">View Mode</string>

    <!--Navigation menu and tabs group-->
    <string name="navigation_menu_and_tab_item_albums">Albums</string>
    <string name="navigation_menu_and_tab_item_artist">Artist</string>
    <string name="navigation_menu_and_tab_item_folders">Folders</string>
    <string name="navigation_menu_and_tab_item_playlists">Playlists</string>
    <string name="navigation_menu_and_tab_item_songs">Songs</string>

    <!--Navigation menu-->
    <string name="navigation_menu_setting">Setting</string>
    <string name="navigation_menu_play_queue">Play Queue</string>
    <string name="navigation_menu_vk_suits">VK Suits</string>

    <!--Toolbar menu-->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_menu">Navigation menu</string>

    <!--Tags-->
    <string name="folder_list_item_type">folder_list_item_type</string>
    <string name="folder_path">folder_path</string>
    <string name="position">position</string>

    <!--Item menu-->
    <string name="delete">Delete</string>

    <!--strings for code-->
    <string name="songs">songs</string>
    <string name="albums">albums</string>

    <!--Log tags-->
    <string name="path_song_info">PathSongsInfo</string>

    <!--Text for recycler when no music available-->
    <string name="no_music">No music found</string>

    <!--Content description for imagebuttons in song control panel-->
    <string name="next_track">Next track</string>
    <string name="previous_track">Previous track</string>
    <string name="play_or_pause_the_track">Play or pause the track</string>
    <string name="now_playing">Now Playing</string>
</resources>
