<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel_control_panel_container"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    android:background="@color/colorPrimary"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cp_song_art"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@mipmap/ic_album"
        android:onClick="openManageActivity"/>

    <TextView
        android:id="@+id/cp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:ems="3"
        android:layout_toRightOf="@id/cp_song_art"
        android:layout_toEndOf="@id/cp_song_art"
        android:layout_toLeftOf="@+id/cp_previous_track"
        android:layout_toStartOf="@+id/cp_previous_track"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cp_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:ems="3"
        android:layout_toRightOf="@id/cp_song_art"
        android:layout_toEndOf="@id/cp_song_art"
        android:layout_toLeftOf="@+id/cp_previous_track"
        android:layout_toStartOf="@+id/cp_previous_track"
        android:layout_below="@id/cp_title"
        android:textColor="@android:color/darker_gray" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/song_progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_toEndOf="@+id/cp_song_art"
        android:layout_toRightOf="@+id/cp_song_art"
        android:minHeight="0dp"
        android:progressDrawable="@drawable/progressbar_style"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/cp_next_track"
        android:layout_width="52dp"
        android:layout_height="58dp"
        android:background="@drawable/buttons_style"
        app:srcCompat="@mipmap/ic_fast_forward_white_36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/next_track" />

    <ImageButton
        android:id="@+id/cp_previous_track"
        android:layout_width="52dp"
        android:layout_height="58dp"
        android:background="@drawable/buttons_style"
        app:srcCompat="@mipmap/ic_fast_rewind_white_36dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/cp_play_pause_track"
        android:layout_toStartOf="@+id/cp_play_pause_track"
        android:contentDescription="@string/previous_track" />

    <ImageButton
        android:id="@+id/cp_play_pause_track"
        app:srcCompat="@mipmap/ic_play_arrow_white_36dp"
        android:layout_width="52dp"
        android:layout_height="58dp"
        android:background="@drawable/buttons_style"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/cp_next_track"
        android:layout_toStartOf="@+id/cp_next_track"
        android:contentDescription="@string/play_or_pause_the_track" />

</RelativeLayout>